--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,7 @@ button {
   border: none;
   padding: 15px 20px;
   flex-grow: 1;
-
-  
+  font-family: "Lucida Console";
   
 }
 
@@ -64,6 +63,7 @@ button:active {
   text-align: center;
   border-top-right-radius: .5rem;
   border-top-left-radius: .5rem;
+  font-family: "Lucida Console";
 }
 
 /* overwritten library -code mirror's css*/
